infrastructure/configs/base/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-web-ui
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,web
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Longhorn Storage
    gethomepage.dev/group: Storage
    gethomepage.dev/icon: longhorn.png
spec:
  rules:
    - host: longhorn.k8s.local.guatalupe.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - longhorn.k8s.local.guatalupe.com
      secretName: longhorn-web-ui-tls
